--- a/src/Components/Order/Order.css
+++ b/src/Components/Order/Order.css
@@ -1,10 +1,21 @@
 .order {
   display: flex; }
-  .order--all {
+  .order__all {
     overflow: auto; }
-    .order--all .order--char {
+    .order__all .order--char {
       border: 1px solid rgba(35, 100, 117, 0.5);
-      padding: 8px; }
+      padding: 8px;
+      transition: all 300ms linear; }
+      .order__all .order--char__playing {
+        border-color: rgba(220, 239, 245, 0.7);
+        background-color: rgba(220, 239, 245, 0.1); }
+  .order__playing .order--char--name {
+    padding: 4px 8px; }
+  .order__playing .order--char:first-child .order--char--name {
+    border: 1px solid #53777a;
+    border-radius: 2px;
+    box-shadow: 0 0 5px 2px rgba(83, 119, 122, 0.6);
+    font-size: 18px; }
   .order--char {
     position: relative;
     margin-right: 24px; }
@@ -26,7 +37,7 @@
         .order--char--life--current--input {
           width: 100%; }
       .order--char--life--max {
-        flex: 1 1 auto; }
+        flex: 1 0 auto; }
     .order--char--button {
       position: absolute;
       top: 8px;
@@ -45,10 +56,3 @@
           justify-content: center; }
     .order--char:last-child {
       margin-right: 0; }
-    .order--char--playing .order--char--name {
-      padding: 4px 8px; }
-    .order--char--playing:first-child .order--char--name {
-      border: 1px solid #53777a;
-      border-radius: 2px;
-      box-shadow: 0 0 5px 2px rgba(83, 119, 122, 0.6);
-      font-size: 18px; }
