--- a/src/Components/PassionModify/PassionModify.scss
+++ b/src/Components/PassionModify/PassionModify.scss
@@ -6,6 +6,7 @@
   display: flex;
   justify-content: space-between;
   overflow: hidden;
+  padding: 1px 1px 1px 0;
 
   &:hover {
     overflow: visible;
