--- a/src/App.css
+++ b/src/App.css
@@ -167,6 +167,21 @@ h4 {
   font-size: 16px;
   line-height: 24px; }
 
+h5,
+h6 {
+  text-shadow: 0 0 10px white;
+  text-transform: uppercase;
+  font-weight: 500; }
+
+h5 {
+  font-size: 18px;
+  line-height: 26px; }
+
+h6 {
+  font-size: 16px;
+  line-height: 24px;
+  color: #add8e6; }
+
 .modal--overlay {
   position: fixed;
   top: 0;
