--- a/src/App.scss
+++ b/src/App.scss
@@ -175,6 +175,24 @@ h4 {
   line-height: $g3;
 }
 
+h5,
+h6 {
+  text-shadow: 0 0 10px white;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+
+h5 {
+  font-size: $g2 + 2;
+  line-height: $g3 + 2;
+}
+
+h6 {
+  font-size: $g2;
+  line-height: $g3;
+  color: $primary-1;
+}
+
 .modal--overlay {
   position: fixed;
   top: 0;
