--- a/src/App.css
+++ b/src/App.css
@@ -226,6 +226,20 @@ textarea {
     -webkit-appearance: none;
     margin: 0; }
 
+.select {
+  position: relative; }
+  .select select {
+    border-radius: 0; }
+  .select::before {
+    position: absolute;
+    display: block;
+    top: 50%;
+    right: 8px;
+    margin-top: -2px;
+    border: 4px solid transparent;
+    border-top-color: #fff;
+    content: ' '; }
+
 input[type='checkbox'] {
   -webkit-appearance: initial;
   width: 24px;
