remove all css files

--- a/src/Components/Item/Item.scss
+++ b/src/Components/Item/Item.scss
@@ -1,5 +1,5 @@
-@import 'scss/layout.scss';
-@import 'scss/colors.scss';
+@import '../../scss/layout.scss';
+@import '../../scss/colors.scss';
 
 .item {
   border-bottom: 1px solid rgba($primary-1, 0.6);
