--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -1,5 +1,5 @@
-@import 'src/scss/layout.scss';
-@import 'src/scss/colors.scss';
+@import '../../scss/layout.scss';
+@import '../../scss/colors.scss';
 
 .skills {
   &--assign {
