--- a/src/styleguide/Button/Button.scss
+++ b/src/styleguide/Button/Button.scss
@@ -1,5 +1,5 @@
-@import 'scss/layout.scss';
-@import 'scss/colors.scss';
+@import '../../scss/layout.scss';
+@import '../../scss/colors.scss';
 
 %button {
   transition: all ease-in-out 300ms;
