--- a/src/Components/Items/Items.scss
+++ b/src/Components/Items/Items.scss
@@ -1,5 +1,5 @@
-@import 'scss/layout.scss';
-@import 'scss/colors.scss';
+@import '../../scss/layout.scss';
+@import '../../scss/colors.scss';
 
 .items {
   &--form {
