--- a/src/Components/Menu/style.scss
+++ b/src/Components/Menu/style.scss
@@ -1,5 +1,5 @@
-@import 'scss/layout.scss';
-@import 'scss/colors.scss';
+@import '../../scss/layout.scss';
+@import '../../scss/colors.scss';
 
 .menu {
   margin-bottom: $g2;
