--- a/src/Components/Equipment/Equipment.scss
+++ b/src/Components/Equipment/Equipment.scss
@@ -4,6 +4,9 @@
 .equipment {
   display: flex;
   align-items: flex-start;
+  @media screen and (max-width: 720px) {
+    display: initial;
+  }
 
   &--schema {
     display: grid;
@@ -18,6 +21,9 @@
     grid-gap: $g1;
     width: $g5 * 4;
     margin-right: $g3;
+    @media screen and (max-width: 720px) {
+      margin: 0 auto $g2;
+    }
 
     &--item {
       opacity: 0.1;
@@ -46,6 +52,10 @@
     box-shadow: 0 0 $g1 rgba($neutral-5, 0.5);
     margin-right: $g3;
     min-width: 200px;
+    @media screen and (max-width: 720px) {
+      margin-right: 0;
+      margin-bottom: $g2;
+    }
 
     &--button {
       // margin-top: $g1;
