--- a/src/Components/Character/Character.scss
+++ b/src/Components/Character/Character.scss
@@ -6,6 +6,10 @@
 }
 
 .character {
+  &--wrapper {
+    padding: 0 $g2;
+  }
+
   &--title {
     margin: $g1 0;
     border-bottom: 1px solid rgba($primary-1, 0.6);
@@ -141,5 +145,9 @@
     &--button {
       width: 144px;
     }
+  }
+
+  &--delete {
+    margin-top: $g3;
   }
 }
