--- a/src/Components/Skills/Skills.scss
+++ b/src/Components/Skills/Skills.scss
@@ -51,17 +51,8 @@
   }
 
   &--list {
-    &--title {
-      display: flex;
-      align-items: center;
-      border-bottom: 1px solid rgba($primary-1, 0.7);
-      margin-bottom: $g2;
-      padding-bottom: $g2;
-
-      span {
-        margin-right: $g2;
-        margin-left: $g2;
-      }
-    }
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
+    grid-gap: $g2;
   }
 }
