--- a/src/App.scss
+++ b/src/App.scss
@@ -261,7 +261,8 @@ textarea {
   }
 }
 
-input[type='checkbox'] {
+input[type='checkbox'],
+input[type='radio'] {
   -webkit-appearance: initial;
   width: $g3;
   height: $g3;
@@ -285,5 +286,17 @@ input[type='checkbox'] {
       background: rgba($primary-1, 0.6);
       box-shadow: 0 0 10px 2px rgba($white, 0.6);
     }
+  }
+}
+
+input[type='radio'] {
+  width: $g2;
+  height: $g2;
+
+  &:checked:after {
+    top: 5px;
+    right: 5px;
+    bottom: 5px;
+    left: 5px;
   }
 }
