[Feat] Use items in dashboard

--- a/src/Components/ItemStats/ItemStats.scss
+++ b/src/Components/ItemStats/ItemStats.scss
@@ -6,6 +6,12 @@
     padding: $g1;
   }
 
+  &--description {
+    font-style: italic;
+    font-size: 14px;
+    padding: $g1;
+  }
+
   &--divider {
     height: 1px;
     background-color: $neutral-3;
