[Feat] Add custom icons to items

--- a/src/styleguide/Icon/styles.scss
+++ b/src/styleguide/Icon/styles.scss
@@ -92,3 +92,639 @@
 .icon-ring1:before {
   content: '\73';
 }
+.icon-bandit:before {
+  content: '\74';
+}
+.icon-barbute:before {
+  content: '\75';
+}
+.icon-black-knight-helm:before {
+  content: '\76';
+}
+.icon-brutal-helm:before {
+  content: '\77';
+}
+.icon-cracked-helm:before {
+  content: '\78';
+}
+.icon-crested-helmet:before {
+  content: '\79';
+}
+.icon-dwarf-helmet:before {
+  content: '\7a';
+}
+.icon-dwarf-king:before {
+  content: '\41';
+}
+.icon-light-helm:before {
+  content: '\42';
+}
+.icon-jewel-crown:before {
+  content: '\43';
+}
+.icon-jester-hat:before {
+  content: '\44';
+}
+.icon-imperial-crown:before {
+  content: '\45';
+}
+.icon-horned-helm:before {
+  content: '\46';
+}
+.icon-heavy-helm:before {
+  content: '\47';
+}
+.icon-gauls-helm:before {
+  content: '\48';
+}
+.icon-galea:before {
+  content: '\49';
+}
+.icon-elf-helmet:before {
+  content: '\4a';
+}
+.icon-outback-hat:before {
+  content: '\4b';
+}
+.icon-overlord-helm:before {
+  content: '\4c';
+}
+.icon-pilgrim-hat:before {
+  content: '\4d';
+}
+.icon-pointy-hat:before {
+  content: '\4e';
+}
+.icon-pope-crown:before {
+  content: '\4f';
+}
+.icon-pschent-double-crown:before {
+  content: '\50';
+}
+.icon-robin-hood-hat:before {
+  content: '\51';
+}
+.icon-warlock-hood:before {
+  content: '\52';
+}
+.icon-war-bonnet:before {
+  content: '\53';
+}
+.icon-visored-helm:before {
+  content: '\54';
+}
+.icon-viking-helmet:before {
+  content: '\55';
+}
+.icon-spartan-helmet:before {
+  content: '\57';
+}
+.icon-samurai-helmet:before {
+  content: '\58';
+}
+.icon-broken-shield:before {
+  content: '\56';
+}
+.icon-checked-shield:before {
+  content: '\59';
+}
+.icon-cracked-shield:before {
+  content: '\5a';
+}
+.icon-crenulated-shield:before {
+  content: '\30';
+}
+.icon-frozen-orb:before {
+  content: '\31';
+}
+.icon-fire-shield:before {
+  content: '\32';
+}
+.icon-eye-shield:before {
+  content: '\33';
+}
+.icon-extraction-orb:before {
+  content: '\34';
+}
+.icon-edged-shield:before {
+  content: '\35';
+}
+.icon-dragon-orb:before {
+  content: '\36';
+}
+.icon-cross-shield:before {
+  content: '\37';
+}
+.icon-lightning-shield:before {
+  content: '\38';
+}
+.icon-magic-shield:before {
+  content: '\39';
+}
+.icon-roman-shield:before {
+  content: '\21';
+}
+.icon-rosa-shield:before {
+  content: '\22';
+}
+.icon-round-shield:before {
+  content: '\23';
+}
+.icon-orbit:before {
+  content: '\24';
+}
+.icon-ice-shield:before {
+  content: '\25';
+}
+.icon-layered-armor:before {
+  content: '\26';
+}
+.icon-smoking-orb:before {
+  content: '\27';
+}
+.icon-slashed-shield:before {
+  content: '\28';
+}
+.icon-skull-shield:before {
+  content: '\29';
+}
+.icon-shield-1:before {
+  content: '\2a';
+}
+.icon-viking-shield:before {
+  content: '\2b';
+}
+.icon-vibrating-shield:before {
+  content: '\2c';
+}
+.icon-unstable-orb:before {
+  content: '\2d';
+}
+.icon-trident-shield:before {
+  content: '\2e';
+}
+.icon-templar-shield:before {
+  content: '\2f';
+}
+.icon-zebra-shield:before {
+  content: '\3a';
+}
+.icon-winged-shield:before {
+  content: '\3b';
+}
+.icon-ample-dress:before {
+  content: '\3c';
+}
+.icon-android-mask:before {
+  content: '\3d';
+}
+.icon-armor-vest:before {
+  content: '\3e';
+}
+.icon-armored-pants:before {
+  content: '\3f';
+}
+.icon-black-belt:before {
+  content: '\40';
+}
+.icon-breastplate:before {
+  content: '\5b';
+}
+.icon-dorsal-scales:before {
+  content: '\5d';
+}
+.icon-claws:before {
+  content: '\5e';
+}
+.icon-chain-mail:before {
+  content: '\5f';
+}
+.icon-dress:before {
+  content: '\60';
+}
+.icon-fur-shirt:before {
+  content: '\7b';
+}
+.icon-large-dress:before {
+  content: '\7c';
+}
+.icon-leather-armor:before {
+  content: '\7d';
+}
+.icon-lamellar:before {
+  content: '\7e';
+}
+.icon-metal-skirt:before {
+  content: '\5c';
+}
+.icon-metal-hand:before {
+  content: '\e000';
+}
+.icon-mechanical-arm:before {
+  content: '\e001';
+}
+.icon-mecha-mask:before {
+  content: '\e002';
+}
+.icon-loincloth:before {
+  content: '\e003';
+}
+.icon-leather-vest:before {
+  content: '\e004';
+}
+.icon-leather-belt:before {
+  content: '\e005';
+}
+.icon-gauntlet:before {
+  content: '\e006';
+}
+.icon-ninja-armor:before {
+  content: '\e007';
+}
+.icon-pauldrons:before {
+  content: '\e008';
+}
+.icon-plastron:before {
+  content: '\e009';
+}
+.icon-robe:before {
+  content: '\e00a';
+}
+.icon-robot-leg:before {
+  content: '\e00b';
+}
+.icon-shirt:before {
+  content: '\e00c';
+}
+.icon-shoulder-armor:before {
+  content: '\e00d';
+}
+.icon-shoulder-scales:before {
+  content: '\e00e';
+}
+.icon-trap-mask:before {
+  content: '\e00f';
+}
+.icon-t-shirt:before {
+  content: '\e010';
+}
+.icon-stegosaurus-scales:before {
+  content: '\e011';
+}
+.icon-spiked-shoulders:before {
+  content: '\e012';
+}
+.icon-skirt:before {
+  content: '\e013';
+}
+.icon-skeletal-hand:before {
+  content: '\e014';
+}
+.icon-trousers:before {
+  content: '\e015';
+}
+.icon-3d-hammer:before {
+  content: '\e016';
+}
+.icon-ak47:before {
+  content: '\e017';
+}
+.icon-armored-boomerang:before {
+  content: '\e018';
+}
+.icon-barbed-spear:before {
+  content: '\e019';
+}
+.icon-baseball-bat:before {
+  content: '\e01a';
+}
+.icon-bracer:before {
+  content: '\e01b';
+}
+.icon-boomerang:before {
+  content: '\e01c';
+}
+.icon-bone-mace:before {
+  content: '\e01d';
+}
+.icon-bone-knife:before {
+  content: '\e01e';
+}
+.icon-bolas:before {
+  content: '\e01f';
+}
+.icon-bo:before {
+  content: '\e020';
+}
+.icon-big-diamond-ring:before {
+  content: '\e021';
+}
+.icon-battle-axe:before {
+  content: '\e022';
+}
+.icon-battered-axe:before {
+  content: '\e023';
+}
+.icon-baton:before {
+  content: '\e024';
+}
+.icon-bracers:before {
+  content: '\e025';
+}
+.icon-broad-dagger:before {
+  content: '\e026';
+}
+.icon-broken-bottle:before {
+  content: '\e027';
+}
+.icon-caduceus:before {
+  content: '\e028';
+}
+.icon-chelsea-boot:before {
+  content: '\e029';
+}
+.icon-claw-string:before {
+  content: '\e02a';
+}
+.icon-diamond-ring:before {
+  content: '\e02b';
+}
+.icon-crystal-wand:before {
+  content: '\e02c';
+}
+.icon-crowbar:before {
+  content: '\e02d';
+}
+.icon-crossed-swords-1:before {
+  content: '\e02e';
+}
+.icon-crossbow:before {
+  content: '\e02f';
+}
+.icon-croc-sword:before {
+  content: '\e030';
+}
+.icon-cowboy-boot:before {
+  content: '\e031';
+}
+.icon-emerald-necklace:before {
+  content: '\e032';
+}
+.icon-fairy-wand:before {
+  content: '\e033';
+}
+.icon-famas:before {
+  content: '\e034';
+}
+.icon-fur-boot:before {
+  content: '\e035';
+}
+.icon-fragmented-sword:before {
+  content: '\e036';
+}
+.icon-flanged-mace:before {
+  content: '\e037';
+}
+.icon-flaming-trident:before {
+  content: '\e038';
+}
+.icon-flamethrower:before {
+  content: '\e039';
+}
+.icon-flail:before {
+  content: '\e03a';
+}
+.icon-fire-ring:before {
+  content: '\e03b';
+}
+.icon-fire-axe:before {
+  content: '\e03c';
+}
+.icon-gem-necklace:before {
+  content: '\e03d';
+}
+.icon-gladius:before {
+  content: '\e03e';
+}
+.icon-glaive:before {
+  content: '\e03f';
+}
+.icon-halberd:before {
+  content: '\e040';
+}
+.icon-half-heart:before {
+  content: '\e041';
+}
+.icon-harpoon-trident:before {
+  content: '\e042';
+}
+.icon-hatchet:before {
+  content: '\e043';
+}
+.icon-health-potion:before {
+  content: '\e044';
+}
+.icon-heart-necklace:before {
+  content: '\e045';
+}
+.icon-heavy-boots:before {
+  content: '\e046';
+}
+.icon-kusarigama:before {
+  content: '\e047';
+}
+.icon-knife-thrust:before {
+  content: '\e048';
+}
+.icon-katana:before {
+  content: '\e049';
+}
+.icon-high-shot:before {
+  content: '\e04a';
+}
+.icon-leather-boot:before {
+  content: '\e04b';
+}
+.icon-lee-enfield:before {
+  content: '\e04c';
+}
+.icon-lightning-saber:before {
+  content: '\e04d';
+}
+.icon-lunar-wand:before {
+  content: '\e04e';
+}
+.icon-mace-head:before {
+  content: '\e04f';
+}
+.icon-nunchaku:before {
+  content: '\e050';
+}
+.icon-mp5:before {
+  content: '\e051';
+}
+.icon-monkey-wrench:before {
+  content: '\e052';
+}
+.icon-magic-trident:before {
+  content: '\e053';
+}
+.icon-magic-potion:before {
+  content: '\e054';
+}
+.icon-machete:before {
+  content: '\e055';
+}
+.icon-orb-wand:before {
+  content: '\e056';
+}
+.icon-p90:before {
+  content: '\e057';
+}
+.icon-pearl-necklace:before {
+  content: '\e058';
+}
+.icon-piercing-sword:before {
+  content: '\e059';
+}
+.icon-pocket-bow:before {
+  content: '\e05a';
+}
+.icon-potion-ball:before {
+  content: '\e05b';
+}
+.icon-primitive-necklace:before {
+  content: '\e05c';
+}
+.icon-quiver:before {
+  content: '\e05d';
+}
+.icon-relic-blade:before {
+  content: '\e05e';
+}
+.icon-revolver:before {
+  content: '\e05f';
+}
+.icon-rod-of-asclepius:before {
+  content: '\e060';
+}
+.icon-shard-sword:before {
+  content: '\e061';
+}
+.icon-scythe:before {
+  content: '\e062';
+}
+.icon-sai:before {
+  content: '\e063';
+}
+.icon-sacrificial-dagger:before {
+  content: '\e064';
+}
+.icon-rusty-sword:before {
+  content: '\e065';
+}
+.icon-rupee:before {
+  content: '\e066';
+}
+.icon-rubber-boot:before {
+  content: '\e067';
+}
+.icon-rope-coil:before {
+  content: '\e068';
+}
+.icon-sharp-axe:before {
+  content: '\e069';
+}
+.icon-sharp-halberd:before {
+  content: '\e06a';
+}
+.icon-shuriken:before {
+  content: '\e06b';
+}
+.icon-skeleton-key:before {
+  content: '\e06c';
+}
+.icon-skull-ring:before {
+  content: '\e06d';
+}
+.icon-steeltoe-boots:before {
+  content: '\e06e';
+}
+.icon-steel-claws:before {
+  content: '\e06f';
+}
+.icon-spiral-thrust:before {
+  content: '\e070';
+}
+.icon-spiked-mace:before {
+  content: '\e071';
+}
+.icon-spiked-bat:before {
+  content: '\e072';
+}
+.icon-sonic-shoes:before {
+  content: '\e073';
+}
+.icon-slingshot:before {
+  content: '\e074';
+}
+.icon-skull-staff:before {
+  content: '\e075';
+}
+.icon-skull-signet:before {
+  content: '\e076';
+}
+.icon-stiletto:before {
+  content: '\e077';
+}
+.icon-stone-axe:before {
+  content: '\e078';
+}
+.icon-stone-spear:before {
+  content: '\e079';
+}
+.icon-tabi-boot:before {
+  content: '\e07a';
+}
+.icon-tec-9:before {
+  content: '\e07b';
+}
+.icon-telescopic-baton:before {
+  content: '\e07c';
+}
+.icon-tomahawk:before {
+  content: '\e07d';
+}
+.icon-torc:before {
+  content: '\e07e';
+}
+.icon-toy-mallet:before {
+  content: '\e07f';
+}
+.icon-walther-ppk:before {
+  content: '\e080';
+}
+.icon-umbrella-bayonet:before {
+  content: '\e081';
+}
+.icon-two-handed-sword:before {
+  content: '\e082';
+}
+.icon-trident:before {
+  content: '\e083';
+}
+.icon-tribal-pendant:before {
+  content: '\e084';
+}
+.icon-war-axe:before {
+  content: '\e085';
+}
+.icon-wizard-staff:before {
+  content: '\e086';
+}
+.icon-wood-axe:before {
+  content: '\e087';
+}
+.icon-wooden-clogs:before {
+  content: '\e088';
+}
