[Feat] Add notes to character

--- a/src/styleguide/Icon/styles.scss
+++ b/src/styleguide/Icon/styles.scss
@@ -728,3 +728,12 @@
 .icon-wooden-clogs:before {
   content: '\e088';
 }
+.icon-gem-chain:before {
+  content: '\e089';
+}
+.icon-gem-pendant:before {
+  content: '\e08a';
+}
+.icon-pencil:before {
+  content: '\e08c';
+}
